--- a/Server/package.json
+++ b/Server/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "app": "node App.js",
     "dev": "nodemon App.js"
-    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
-    "express": "^4.17.1"
+    "cookie-parser": "^1.4.6",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
