--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tftmacro",
-  "version": "0.1.0",
+  "name": "Academy.GG",
+  "version": "0.2.5",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.5.0",
